--- a/Modal/style.css
+++ b/Modal/style.css
@@ -6,7 +6,7 @@
   }
   
   .modal-background {
-    /* display: none; */
+    display: none;
     background-color: rgba(0, 0, 0, 0.2);
     position: fixed;
     top: 0;
