--- a/Button Ripple Effect/style.css
+++ b/Button Ripple Effect/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
   
   body {
@@ -9,5 +10,47 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgb(114, 246, 206);
+    background-color: rgb(90, 247, 200);
+  }
+  
+  .ripple-effect {
+    border: none;
+    box-shadow: .5px .8px 0.3px rgb(67, 66, 66);
+    position: relative;
+    padding: 15px 35px;
+    display: inline-block;
+    margin: 10px;
+    font-size: 20px;
+    letter-spacing: 3px;
+    border-radius: 40px;
+    cursor: pointer;
+    overflow: hidden;
+    background: linear-gradient(90deg, rgb(0, 255, 42), rgb(13, 213, 249));
+    color: #fff;
+    font-weight: bold;
+  }
+  
+  .ripple-effect.secondary {
+    background: linear-gradient(90deg, rgb(255, 0, 93), rgb(238, 206, 0));
+  }
+  
+  .ripple-effect > span {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.4);
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    border-radius: 50%;
+    animation: rippleEffectAnimation 1s linear infinite;
+  }
+  
+  @keyframes rippleEffectAnimation {
+    0% {
+      height: 0;
+      width: 0;
+    }
+  
+    100% {
+      height: 500px;
+      width: 500px;
+    }
   }
