--- a/MultiStep Progress Bar/style.css
+++ b/MultiStep Progress Bar/style.css
@@ -1,70 +1,101 @@
-*{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
+* {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  text-align: center;
 }
-body{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: start;
-    justify-content: center;
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: start;
+  justify-content: center;
 }
-.progress-action{
-    display: flex;
-    justify-content: space-evenly;
+.progress-action {
+  display: flex;
+  justify-content: space-evenly;
 }
 .button {
-    width: 150px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 12px;
-    cursor: pointer;
-    border: 3px solid rgb(255, 239, 94);
-    background-color: rgb(255, 239, 94);
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.137);
-    border-radius: 25px;
+  margin-top: 50px;
+  width: 150px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 12px;
+  cursor: pointer;
+  border: 3px solid rgb(255, 239, 94);
+  background-color: rgb(255, 239, 94);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.137);
+  border-radius: 25px;
+}
+
+.text {
+  width: 70%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(27, 27, 27);
+  color: white;
+  border-radius: 5px;
+  background-repeat: 25px;
+}
+
+.arrow path {
+  fill: rgb(19, 19, 19);
+}
+.prev .arrow {
+  transform: rotate(180deg);
+}
+.next .text {
+  margin-left: 15px;
+}
+
+.button:hover .arrow {
+  animation: slide-in-left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.button.disable {
+  opacity: 0.6;
+}
+
+@keyframes slide-in-left {
+  0% {
+    /* transform: translateX(-8px); */
+    opacity: 0;
   }
-  
-  .text {
-    width: 70%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(27, 27, 27);
-    color: white;
-    border-radius: 5px;
-    background-repeat: 25px;
+
+  100% {
+    /* transform: translateX(0px); */
+    opacity: 1;
   }
-  
-  .arrow path {
-    fill: rgb(19, 19, 19);
-  }
-  .prev .arrow{
-    transform: rotate(180deg);
-  }
-  .next .text{
-    margin-left: 15px;
-  }
-  
-  .button:hover .arrow {
-    animation: slide-in-left 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  }
-  
-  @keyframes slide-in-left {
-    0% {
-      /* transform: translateX(-8px); */
-      opacity: 0;
-    }
-  
-    100% {
-      /* transform: translateX(0px); */
-      opacity: 1;
-    }
-  }
-  
-  .button:active {
-    transform: scale(0.97);
-  }
+}
+
+.button:active {
+  transform: scale(0.97);
+}
+
+.progress-container {
+  height: 10px;
+  width: 500px;
+  margin: 50px auto;
+  border-radius: 10px;
+  background: #e3e0e0;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+.progress {
+  height: 5px;
+  margin: 0 5px;
+  width: 0;
+  max-width: 495px;
+  background: #ffc20c;
+  border-radius: 10px;
+  transition: width 0.3s ease;
+}
+.progress-container h1 {
+  position: absolute;
+  transform: translate(200px, 50px);
+}
